force-app/main/default/objects/Customer__c/fields/Churn__c.field-meta.xml
<CustomField>
    <fullName>Churn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Churn</label>
    <type>Checkbox</type>
</CustomField>