force-app/main/default/objects/Customer__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>Two Year</fullName>
            </value>
            <value>
                <fullName>Month-to-Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>