force-app/main/default/objects/Customer__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer Identifier</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>