force-app/main/default/objects/Customer__c/fields/Dependents__c.field-meta.xml
<CustomField>
    <fullName>Dependents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependents</label>
    <type>Checkbox</type>
</CustomField>