force-app/main/default/objects/Customer__c/fields/Device_Protection__c.field-meta.xml
<CustomField>
    <fullName>Device_Protection__c</fullName>
    <label>Device Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_Service_Customer</valueSetName>
    </valueSet>
</CustomField>