force-app/main/default/objects/Customer__c/fields/Internet_Service__c.field-meta.xml
<CustomField>
    <fullName>Internet_Service__c</fullName>
    <label>Internet Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSL</fullName>
            </value>
            <value>
                <fullName>Fiber Optic</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>