force-app/main/default/objects/Customer__c/fields/Multiple_Lines__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Lines__c</fullName>
    <label>Multiple Lines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Phone Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>