force-app/main/default/objects/Customer__c/fields/Online_Backup__c.field-meta.xml
<CustomField>
    <fullName>Online_Backup__c</fullName>
    <label>Online Backup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_Service_Customer</valueSetName>
    </valueSet>
</CustomField>