force-app/main/default/objects/Customer__c/fields/Phone_Service__c.field-meta.xml
<CustomField>
    <fullName>Phone_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Service</label>
    <type>Checkbox</type>
</CustomField>