force-app/main/default/objects/Customer__c/fields/Streaming_Movies__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Movies__c</fullName>
    <label>Streaming Movies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_Service_Customer</valueSetName>
    </valueSet>
</CustomField>