force-app/main/default/objects/Customer__c/fields/Streaming_TV__c.field-meta.xml
<CustomField>
    <fullName>Streaming_TV__c</fullName>
    <label>Streaming TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_Service_Customer</valueSetName>
    </valueSet>
</CustomField>