force-app/main/default/objects/Customer__c/fields/Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support__c</fullName>
    <label>Tech Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internet_Service_Customer</valueSetName>
    </valueSet>
</CustomField>