force-app/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_ID__c</columns>
    <columns>Gender__c</columns>
    <columns>Internet_Service__c</columns>
    <columns>Phone_Service__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Tenure__c</columns>
    <columns>Churn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>